[package]
name = "wasm-engine"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
regex = "1.7.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"

[profile.release]
opt-level = "s" # Optimize for size
lto = true
